# pwd_manager

./: Cargo.toml  new.db
.cargo/: config.toml
herakles/: .rust-project.json  package-lock.json  package.json  tailwind.config.js  vite.config.ts
herakles/src/: App.css  App.tsx  SuccessLogin.tsx  backend_fn.tsx  login.tsx  main.tsx  page.tsx  password.tsx  passwordbiglist.txt  pwdDatasetGen.tsx  vault.tsx
herakles/src-tauri/: .taurignore  Cargo.toml  tauri.conf.json
herakles/src-tauri/src/: error.rs  main.rs  utils copy.rs
herakles/src-tauri/src/encryption/: database.rs
herakles/src-tauri/src/entities/: account.rs  master_profil.rs  mod.rs  traits.rs  vault.rs
herakles/src/components/: Modal.tsx
herakles/src/media/jsx/: copy.jsx
herakles/src/pages/: login.tsx  vault.tsx
herakles/src/pages/login/: LoginCard.tsx  LoginCategoryImages.tsx  LoginChooseAvatar.tsx  LoginField.tsx
herakles/src/pages/vault/: VaultCard.tsx  VaultModal.tsx  VaultSkeleton.tsx
src/: error.rs  main.rs  master_profil.rs  tests.rs  traits.rs
src/encryption/: crypto.rs  database.rs  mod.rs
src/entities/: account.rs  master_profil.rs  mod.rs  traits.rs  vault.rs
