[package]
name = "pwd_manager"
version = "0.1.0"
edition = "2021"

[dependencies]
rusqlite = {version = "0.32.1", features = ["functions"]}
chrono = "0.4.38"
aes = "0.7.4"
block-modes = "0.8.1"
block-padding = "0.2.1"
rand = "0.8.3"
hex = "0.4.3"
pbkdf2 = "0.12.0"  # Vérifiez pour obtenir la dernière version disponible
hmac = "0.12.1"    # Vérifiez pour obtenir la dernière version disponible
sha2 = "0.10.0"
bcrypt = "0.15.1" # Vérifiez pour obtenir la dernière version disponiblex
anyhow = "1.0"
ring = "0.16.20"
chacha20poly1305 = "0.10.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex-literal = "0.3"

[dependencies.uuid]
version = "1.10.0"
features = [
    "v4",
    "fast-rng",
    "macro-diagnostics",
]
